# ampav-core

./: README.md  pyproject.toml
ampav/core/: gpu.py  logging.py  media.py  schema.py  utils.py
ampav/core/file_formats/: textfile.py  threeplay.py  webvtt.py
ampav/core/formats/transcript/: textfile.py  threeplay.py  utils.py  webvtt.py
ampav/core/schema/: __init__.py  aggregate.py  av_metadata.py  basemodel.py  segments.py  tool.py  transcript.py
