[project]
name = "ampav-core"
version = "0.0.3"
description = "Core Libraries/Schemas/Utilties for the AMPAV environment"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",   
]
authors = [
    {name = "Brian Wheeler", email="bdwheele@iu.edu"},
]

requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pyyaml",
    "av",
    "torch"
]

[project.scripts]
probe_media = "ampav.core.media:cli_probe_media"


[project.urls]
Homepage = "https://github.com/AMPAV/ampav-core"
Repository = "https://github.com/AMPAV/ampav-core.git"
Issues = "https://github.com/AMPAV/ampav-core/issues"



[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

